@@ -1,7 +1,5 @@
 
   - Why do key an value operators have "ifIndex"?
-  - Check if adding "Fn.by(IFunction, IFunction)" is possible
-  - Add "by" versions to comparators: eq, notEq, lessThan, null, isNull, etc. (if needed)
   - Check the possibility of removing the ofX() step from FnMath
   - Add method to create maps from arrays, lists and sets considering them values/keys and zipping
     keys/values. Maybe think about renaming current "toMapByX" methods.
