@@ -27,6 +27,7 @@ import java.util.Set;
 
 import org.apache.commons.lang.Validate;
 import org.javaruntype.type.Type;
+import org.op4j.Fn;
 import org.op4j.exceptions.ExecutionException;
 
 
@@ -75,6 +76,9 @@ public final class FnObject {
         return new ToSingletonSet<T>();
     }
 
+    
+    
+    
 
     
     
@@ -277,6 +281,232 @@ public final class FnObject {
     
     
     
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+
+    
+    
+    public static final <X> Function<X,Boolean> eqBy(final IFunction<X,?> by, final Object object) {
+        return Fn.by(by, eq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> eqBy(final IFunction<X,?> by, final float object) {
+        return Fn.by(by, eq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> eqBy(final IFunction<X,?> by, final double object) {
+        return Fn.by(by, eq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> eqBy(final IFunction<X,?> by, final byte object) {
+        return Fn.by(by, eq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> eqBy(final IFunction<X,?> by, final short object) {
+        return Fn.by(by, eq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> eqBy(final IFunction<X,?> by, final int object) {
+        return Fn.by(by, eq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> eqBy(final IFunction<X,?> by, final long object) {
+        return Fn.by(by, eq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> eqBy(final IFunction<X,?> by, final boolean object) {
+        return Fn.by(by, eq(object));
+    }
+    
+    
+    public static final <X> Function<X,Boolean> notEqBy(final IFunction<X,?> by, final Object object) {
+        return Fn.by(by, notEq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> notEqBy(final IFunction<X,?> by, final float object) {
+        return Fn.by(by, notEq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> notEqBy(final IFunction<X,?> by, final double object) {
+        return Fn.by(by, notEq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> notEqBy(final IFunction<X,?> by, final byte object) {
+        return Fn.by(by, notEq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> notEqBy(final IFunction<X,?> by, final short object) {
+        return Fn.by(by, notEq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> notEqBy(final IFunction<X,?> by, final int object) {
+        return Fn.by(by, notEq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> notEqBy(final IFunction<X,?> by, final long object) {
+        return Fn.by(by, notEq(object));
+    }
+    
+    public static final <X> Function<X,Boolean> notEqBy(final IFunction<X,?> by, final boolean object) {
+        return Fn.by(by, notEq(object));
+    }
+
+    
+    
+    
+    
+    
+    
+
+    
+    public static final <X> Function<X,Boolean> lessThanBy(final IFunction<X,?> by, final Object object) {
+        return Fn.by(by, lessThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessThanBy(final IFunction<X,?> by, final float object) {
+        return Fn.by(by, lessThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessThanBy(final IFunction<X,?> by, final double object) {
+        return Fn.by(by, lessThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessThanBy(final IFunction<X,?> by, final byte object) {
+        return Fn.by(by, lessThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessThanBy(final IFunction<X,?> by, final short object) {
+        return Fn.by(by, lessThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessThanBy(final IFunction<X,?> by, final int object) {
+        return Fn.by(by, lessThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessThanBy(final IFunction<X,?> by, final long object) {
+        return Fn.by(by, lessThan(object));
+    }
+
+    
+    
+    public static final <X> Function<X,Boolean> lessOrEqToBy(final IFunction<X,?> by, final Object object) {
+        return Fn.by(by, lessOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessOrEqToBy(final IFunction<X,?> by, final float object) {
+        return Fn.by(by, lessOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessOrEqToBy(final IFunction<X,?> by, final double object) {
+        return Fn.by(by, lessOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessOrEqToBy(final IFunction<X,?> by, final byte object) {
+        return Fn.by(by, lessOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessOrEqToBy(final IFunction<X,?> by, final short object) {
+        return Fn.by(by, lessOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessOrEqToBy(final IFunction<X,?> by, final int object) {
+        return Fn.by(by, lessOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> lessOrEqToBy(final IFunction<X,?> by, final long object) {
+        return Fn.by(by, lessOrEqTo(object));
+    }
+    
+    
+
+    
+
+    
+
+
+    
+    public static final <X> Function<X,Boolean> greaterThanBy(final IFunction<X,?> by, final Object object) {
+        return Fn.by(by, greaterThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterThanBy(final IFunction<X,?> by, final float object) {
+        return Fn.by(by, greaterThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterThanBy(final IFunction<X,?> by, final double object) {
+        return Fn.by(by, greaterThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterThanBy(final IFunction<X,?> by, final byte object) {
+        return Fn.by(by, greaterThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterThanBy(final IFunction<X,?> by, final short object) {
+        return Fn.by(by, greaterThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterThanBy(final IFunction<X,?> by, final int object) {
+        return Fn.by(by, greaterThan(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterThanBy(final IFunction<X,?> by, final long object) {
+        return Fn.by(by, greaterThan(object));
+    }
+
+    
+    
+    public static final <X> Function<X,Boolean> greaterOrEqToBy(final IFunction<X,?> by, final Object object) {
+        return Fn.by(by, greaterOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterOrEqToBy(final IFunction<X,?> by, final float object) {
+        return Fn.by(by, greaterOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterOrEqToBy(final IFunction<X,?> by, final double object) {
+        return Fn.by(by, greaterOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterOrEqToBy(final IFunction<X,?> by, final byte object) {
+        return Fn.by(by, greaterOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterOrEqToBy(final IFunction<X,?> by, final short object) {
+        return Fn.by(by, greaterOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterOrEqToBy(final IFunction<X,?> by, final int object) {
+        return Fn.by(by, greaterOrEqTo(object));
+    }
+    
+    public static final <X> Function<X,Boolean> greaterOrEqToBy(final IFunction<X,?> by, final long object) {
+        return Fn.by(by, greaterOrEqTo(object));
+    }
+    
+    
+    
+
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
     public static final Function<Object,Boolean> isNull() {
         return IS_NULL;
     }
@@ -284,6 +514,39 @@ public final class FnObject {
     public static final Function<Object,Boolean> isNotNull() {
         return IS_NOT_NULL;
     }
+    
+    
+    
+    public static final <X> Function<X,Boolean> isNullBy(final IFunction<X,?> by) {
+        return Fn.by(by, IS_NULL);
+    }
+    
+    public static final <X> Function<X,Boolean> isNotNullBy(final IFunction<X,?> by) {
+        return Fn.by(by, IS_NOT_NULL);
+    }
+    
+    
+    
+
+    
+    
+    
+
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
     
     
     
